// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "170b8008f53312",
  "0c1dc4c931d1c1",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "0ce488d40ca43a",
  "05132ab7403468",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "155e8c3db4d986",
  "0a1b0f4bd8f20d",
  "02a776517f7993",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "0d295f8cde502e",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "01bf99e87db859",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "193b164639ff17",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "0535ec030bcd20",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "0770d4b3998fcc",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "1488ef13c2ba05",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "076572e8a6469d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "06fc74351c4400",
  "0f16afb3799454",
  "11738969c907ca",
  "1b8f37f2a9093b",
  "1e68f3ba53f571",
  "0485c50b93f58a",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "0ab6dad976f4d6",
  "1703c21c77e591",
  "1bfae6003d0120",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1e07425e0ceca5",
  "03adb629b9f6a2",
  "0801a3166655dd",
  "1469df7798eb23",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "127831c33e9870",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "0e2eb4f1bf33c0",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "042cb9e8865bd4",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1062c7227643cb",
  "1e1b9a02c20fb9",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "17289c66a62109",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "150482ee07be66",
  "0c2536c1434f80",
  "19198c737937c2",
  "1f76c94b1d47bb",
  "06c519926b92bd",
  "11d2c8fb928a4a",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1e4ca9d8b19100",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "025dc26c5fcfdc",
  "0807bbec8a25b9",
  "1b1961c4577aad",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "0526c3e248c604",
  "00f9fa180e3660",
  "05404ea99a8c96",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "011e3784b6244b",
  "05650d09c80472",
  "09bb7b6b44a6f4",
  "1d54a658a6c9dc",
  "13a4596cefe1b0",
  "1de48df85fb3e9",
  "024d4ea446736f",
  "15e086a63ac0a6",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "001622b87364f7",
  "0454ec37cb69b5",
  "0e3b7df8db6da7",
  "1609195dbf320a",
  "1b089453084835",
  "19d409d40da594",
  "02717ab0a86321",
  "132f41736829c8",
  "0bde8979ee2f85",
  "12da942897714e",
  "1ce93ec9cd9d3d",
  "0a6cd1bafcf66c",
  "1a2f3d1d2832a5",
  "1ea7fa71f7f897",
  "1d0e7194e178ea",
  "157c53371bed28",
  "1fe2c4a83e8893",
  "04867d04e87cd1",
  "06fa1554d1b136",
  "12d872e2023618",
  "12cd73274b3c59",
  "1c0c003bf07f13",
  "10746ca67a47fb",
  "0a0b303d49bd69",
  "13ae7795edc2b8",
  "0066209dac1245",
  "0601462a3b59bc",
  "01f4fa00718c4d",
  "1ddd46ed7ca87a",
  "028505396a3830",
  "0b104211259da9",
  "01ff385cee5d14",
  "098bebd15f4c16",
  "0ab92f6f94f795",
  "02f1ee53c58237",
  "1d51c8401635a4",
  "10506717147790",
  "0b9fb0596b9c15",
  "1a8bdf81015c5b",
  "1fc2d5f9757cf5",
  "152e8d77477d2f",
  "139200cccbf0c3",
  "04e0636d5d2c0a",
  "13bd5ee554f21f",
  "02cacde3909378",
  "13fa413c0a0c53",
  "06f80d0e2584a3",
  "18c7c2b295f8d4",
  "138fe310ec173d",
  "0e8aec3090851d",
  "1d464ff13e4749",
  "070bab9f41a149",
  "052b2e3f1d7d89",
  "032b67c6704e85",
  "03f24e53364473",
  "185106d77f4635",
  "192b0109766691",
  "056569626d91d8",
  "15fb8cd1d28270",
  "05b05a65c5c3bd",
  "18b2ebe111b0b0",
  "0832bc1891481e",
  "0159e25046112e",
  "0d7cf88751f812",
  "10aa8d3013c5c5",
  "0dbac1e1e5d00e",
  "07d4ce7218b5e3",
  "11b4a0fc67568d",
  "1afcf2ee62a617",
  "03c1201cf9d20b",
  "0c3d008e99e962",
  "02ab7904558b3c",
  "0107617689c753",
  "135fa96a86ec14",
  "04b2cd82667710",
  "0d80fd3b2bf08e",
  "156b9615f6de54",
  "16cc04a8827f32",
  "1df78f327d55c7",
  "0f950ea1836dd3",
  "0f3e17083daa06",
  "080c6a9b0c01bc",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "1e94425e6771c5",
  "1421d152456a3a",
  "0c42a5d000f468",
  "0458e5a1bb4790",
  "1fb1a94668bb22",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "00ab87e6bfd815",
  "0b3ef80297a3a1",
  "054a2bf467369e",
  "0e6b095c5c3bce",
  "06ddb3ce632e8b",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "1b06c10fd069cf",
  "08edcce0dd4385",
  "1cb340c1159e36",
  "00008b9482c8a4",
  "1f378209e83279",
  "1d6795a5e87a35",
  "08f1126df556d5",
  "0883dac6baf369",
  "13d92157763150",
  "0a06cf6d82c32c",
  "1975fe3f0e8b97",
  "0ec0a3b494bb84",
  "0d8e352132ef0b",
  "110662c650e9e3",
  "0b82f299464775",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "06c7895497a640",
  "1fc37e759e3a22",
  "01b92d270831fb",
  "14f404cf83bffc",
  "19d635afcf1064",
  "12021635a06afd",
  "0ebd01af21ce66",
  "16304b5a4a5162",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1e27e042552371",
  "0316d54d446aa8",
  "013e425454dd4c",
  "0f0a21393d6879",
  "1d24e4b25e2b05",
  "0f798ca95ae623",
  "18c5f156a6c9df",
  "06a41ec9efaa55",
  "0cc7d542decb6e",
  "1d6ec92562bac9",
  "00791f60245386",
  "1aeb1a24049840",
  "0d6e868c78c2f0",
  "0e2166d7f66b36",
  "0490327e13629c",
  "014b927ef11857",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "1ceccc98074671",
  "1769a2773c0003",
  "1422f160ecb2ad",
  "0e2ccf25b35e30",
  "1e8fcaa7a6910c",
  "040a4e4f024ead",
  "0ba009cf59ae9c",
  "0d8376b74a285a",
  "10d71f05e2a8cf",
  "1eeee4a748ebf4",
  "0f6da6475a9b00",
  "1280702bf87bde",
  "0ab7059d4eb0a0",
  "1d5fb51c55699a",
  "0e0256d26c9dfc",
  "0670c18661082c",
  "19765d799fd7aa",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "0b1e0457f48d4c",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "0960914e5bcb77",
  "1aaf411b421dab",
  "150898c71a1a97",
  "1c295617e904b9",
  "0ca5a4cb7c5bb4",
  "0ab0b4ef9e9766",
  "1af6153285bfe6",
  "19c94adc45f7b1",
  "0b5dab69178e0b",
  "1e89f743d9ac93",
  "168be1da18953d",
  "06dc1edff14c9c",
  "0f87b0ac210899",
  "100d2ea572ab5b",
  "051cb9dda50b97",
  "0b864790797f5f",
  "17fda2c672d06a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "170b8008f53312",
  "05650d09c80472",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "1ce93ec9cd9d3d",
  "0a1b0f4bd8f20d",
  "1a2f3d1d2832a5",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "06fa1554d1b136",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "0601462a3b59bc",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "0ab92f6f94f795",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "1a8bdf81015c5b",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "138fe310ec173d",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "056569626d91d8",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "11b4a0fc67568d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "0f3e17083daa06",
  "0f16afb3799454",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "1703c21c77e591",
  "0b3ef80297a3a1",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "1f378209e83279",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "14f404cf83bffc",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "013e425454dd4c",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "0e2166d7f66b36",
  "0c2536c1434f80",
  "19198c737937c2",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1422f160ecb2ad",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "150898c71a1a97",
  "00f9fa180e3660",
  "0ca5a4cb7c5bb4",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "118a7021804c77",
  "09c0aa8c70f18a",
  "01cebc4e2e9a3d",
  "14dcc72460a72c",
  "10bd71a4309c97",
  "16000ba9380777",
  "04c46bb9b39b8a",
  "0b77a1306fdc77",
  "05ccf8b8a00261",
  "1ebb54273832f8",
  "0c9229d73394c0",
  "1536cf04776a15",
  "1d479349199d30",
  "17a43fe93ed2af",
  "1690a4935864ea",
  "18bed7e63e4ed8",
  "09f3a3659c40b1",
  "1885f55f576aa8",
  "1a77102ac6481c",
  "09eda676026686",
  "170314cc05dfad",
  "0ed0763ad940b2",
  "0f99cf546822e8",
  "17f4fbad5403ad",
  "04d85de4abcf0a",
  "057bb64b49e2b4",
  "1c49ba7618e145",
  "0594c71b952f15",
  "0bbf88ee9e2a99",
  "0af16b6e4e494b",
  "1188ee9602b819",
  "19b28b1b6599d9",
  "1a698348c868c1",
  "1b0f98809467c9",
  "09c8a833726ce0",
  "16a10f9c6af025",
  "1c514adcb3ed10",
  "152c299183a834",
  "156c729f8c6779",
  "14d385f143cbf9",
  "0402d8af1aa7d1",
  "1046db0cb8aae6",
  "0d093f015618a1",
  "098884412d3d55",
  "03b5f12834e2db",
  "09d930e0948f45",
  "1c70bd601e59b3",
  "08806ad6a83c42",
  "0ce98a8035d19f",
  "1e308c1441c02b",
  "17528508b4dcc3",
  "0be94310a4465a",
  "1f142ef63faf1b",
  "114860b7513a52",
  "09002c89f3ab03",
  "10e0863cd98831",
  "01f5ebeb1839f3",
  "071cf5d4e17d2c",
  "11a52db24009ba",
  "0c1275e1b3ee87",
  "1d4847ff59c3bf",
  "0f8d0024d8600f",
  "0fc1680eb61d6a",
  "0999a1b4b431d0",
  "1145252afcb968",
  "08d15fb32cd7a2",
  "1172cc61b2319f",
  "0ec5cda298012a",
  "091e6629264cdb",
  "0441fa8558b8bc",
  "1da8f6199b905b",
  "0971c7ec189049",
  "195ead0ff40899",
  "06995267e30e6e",
  "1a8837911f65f6",
  "0d90443ef617f2",
  "08565a5fa708c0",
  "07f702cffd2b98",
  "01782cc6b64707",
  "06cb75db489af7",
  "12f4b793bdb80c",
  "198fefd4bf8c24",
  "08f192b35bcebf",
  "15d299b2b8c03a",
  "024dd0d46bf2f5",
  "12f8a3ed242197",
  "0f3c3d4217ac6c",
  "0e4acac8772277",
  "00cb5a8069c1b9",
  "09e0fcca0717c1",
  "0cbcff3584adb7",
  "0f67bb7b954233",
  "1971a3a75ffcb0",
  "1a4691ce4ccc4d",
  "02eba1c172bd4e",
  "07b8581af216e4",
  "0954bc7dab986d",
  "042086f70c9181",
  "130a4b12f5a3bb",
  "0d6ded4004249c",
  "19e64aa389910f",
  "18c0be62dc0238",
  "1875d82436235f",
  "1c293b8c61b6b9",
  "0783356676d43d",
  "1fe937dabd3579",
  "00d5430f6867cd",
  "164273b17c731b",
  "1166b4aa41b737",
  "07eb3c2e21001d",
  "02ea403f60b92d",
  "1cc9034b7c6372",
  "0042e2f4a9a22f",
  "1eebf4f9a5b350",
  "0f58075adf197d",
  "15943f0681e922",
  "18d8081f59cc18",
  "1f736968c78051",
  "17900e12b1db23",
  "1f25292a955073",
  "02a8c1bb8b2eb7",
  "0606f599472d68",
  "1b783077edf3dd",
  "05e5ce24ea0d25",
  "10e2c396d9cd29",
  "04fd85e72e3efb",
  "1674546ec00626",
  "1f9bcb553616d6",
  "1dc92c0b26830d",
  "08bb5d43ae0e85",
  "09636f2d1d74ed",
  "1b6ec3afbbce7b",
  "049b6c4e55c1ce",
  "1fa7817b7a57d2",
  "1672f92a443238",
  "047b7e583e2a64",
  "08a3ad0418dd40",
  "05ef8c3600cb35",
  "1d3bff74592ffb",
  "0276b57837c462",
  "1c9221b371902e",
  "04296e0fb0b3ef",
  "080dcefaef9f3e",
  "179a9ba2c254d4",
  "11ea50e16bdaf6",
  "0c137ef170c8fd",
  "0b19b15fe5d5d3",
  "02be0a985bf40d",
  "031cc9b94e557a",
  "175ce410e97628",
  "136dc2f733ac47",
  "0ed25e5b7854d5",
  "1469d1d401cbd7",
  "108b2864b8a5aa",
  "0f346606c359b7",
  "1c5eced1886a2b",
  "0a4b816bc996bc",
  "1cfec38bc76bb9",
  "0a22b75d15bae8",
  "1e6a5ad2a7b767",
  "1460a5ce6464e3",
  "10dd581fe57824",
  "047110f5ef63e8",
  "079719a16dc619",
  "0b9cb4a4a75cc1",
  "138d0180892670",
  "1afbe0fdc7cf53",
  "072832d3c4b351",
  "1a6339e557388d",
  "14cd09824a5b72",
  "10ceff56fb0fdd",
  "17c19fd223b61e",
  "03ac7195ffc7b6",
  "06d1635bd25ed3",
  "0859a8ec8864da",
  "0314941f7a6bca",
  "0b9a6ca7cbedb1",
  "1b4b25d42cb04e",
  "1a562504ad0736",
  "0d191d7935f198",
  "0f5840272b3397",
  "091c91bfbcd518",
  "00daf45042c19f",
  "0326de96ff03dd",
  "0343032ba34f7c",
  "1e0cd6ace18d9f",
  "10bdb23d93c6ab",
  "044f3a732f4bb1",
  "1a1096176b6a48",
  "08c7978c334c16",
  "0e376d923cb4c5",
  "1d71a5659fe9f5",
  "11789cfecd8eb3",
  "12096a72572e29",
  "05163b048cc27c",
  "09cb20d1661a89",
  "074a21b0501da3",
  "02dc3f15ab9f78",
  "10a69f6bd90eaf",
  "13f6f2083c2dd9",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "032b4c0c5cc8e0",
  "0765cb8e3f4c74",
  "08e57ef3a66e54",
  "1e13904bb37551",
  "1b16e761853e2e",
  "14ed0a685c7b16",
  "04c46bb9b39b8a",
  "07677b0f56fbac",
  "05ccf8b8a00261",
  "08aac36bbf3eb8",
  "0bbe177c3404a5",
  "1aac5089c2eb15",
  "03fdb1459e85d1",
  "00db4269114d27",
  "1fc34479d64100",
  "1ec3b9c6182309",
  "09f3a3659c40b1",
  "005fe878491b26",
  "187594f2f3af3e",
  "123682512b0492",
  "08334746c4cb5c",
  "0f713c3619bdfe",
  "133db73302b4d9",
  "0a6ef76ba3a597",
  "02bde001fef1a3",
  "0504988f50e3cb",
  "169014fb95bba8",
  "0959cb721e3321",
  "1fc900e44ca14f",
  "06460f12cbadd9",
  "174b7aa1da719e",
  "19aa44bc85863a",
  "0ed66457562e42",
  "1d176999606470",
  "1c9c8c0e858c97",
  "16a10f9c6af025",
  "1100a45cdd5fbf",
  "08c84411260f6d",
  "18fa511e237c3f",
  "186156754c3a14",
  "0f29ef4bc323d6",
  "1d231a76bf1216",
  "1224f314eae8c2",
  "1cbb399e69045d",
  "0396a85e6cbe8f",
  "134ae007c26e87",
  "04734a35bcfa39",
  "08806ad6a83c42",
  "192a290a5a489b",
  "141fa5de018010",
  "17facb89fd0765",
  "0be94310a4465a",
  "1d38212d8b33a6",
  "114860b7513a52",
  "0377c56fb399b2",
  "1208639119edde",
  "1342e6a82c6366",
  "071cf5d4e17d2c",
  "0660b713bedb18",
  "00a62a06aef1f6",
  "16833be1e0310d",
  "1e5123dfcf7c20",
  "13330eb192c3ed",
  "0999a1b4b431d0",
  "003453a171930e",
  "08d15fb32cd7a2",
  "198373b31c7b4c",
  "061b6766a3506e",
  "0842575f633007",
  "03cce50c93a5ad",
  "0794e74a72fbe2",
  "0eda7d82fb6ddf",
  "0e539096536aac",
  "0d6e700483139d",
  "1f6174d0214fa4",
  "02bce430ae9cc5",
  "156506dd88e8a9",
  "100a4420c36062",
  "04a7a160e2dd1c",
  "04973add9f0110",
  "1f7214e5869878",
  "198fefd4bf8c24",
  "02346723b6ce9e",
  "020833b9ba1d27",
  "0f8f229ddae707",
  "11d69b9886ee18",
  "19aeecedd5ee7f",
  "0c5bc105bf8910",
  "1c7030a1dd8432",
  "030162024a2f80",
  "0c2c5d9a1dc3e3",
  "19e5d2e1f4dafb",
  "09aecb4de9081d",
  "054edbc1663637",
  "0120303896b787",
  "04ec56d642d34d",
  "143478cbd1997a",
  "0bae51c9467c6e",
  "130a4b12f5a3bb",
  "1935e5dc5b37c6",
  "0d38c4165a51e0",
  "0d50628da9896b",
  "1875d82436235f",
  "192695282f30fe",
  "029a05f895f916",
  "05193e7a145d46",
  "03df34b663c4c7",
  "18eed58d70e54a",
  "166a93368ed675",
  "0a6bd84cfd912f",
  "1f380d90731911",
  "1cc9034b7c6372",
  "197823ba383d32",
  "100642093a43c7",
  "04b6bf8b2976dd",
  "16816cce6a5449",
  "1393bcfb6f9f18",
  "0f6177877ceb9d",
  "1068d4aaa8ade6",
  "15baf40db8a492",
  "02a8c1bb8b2eb7",
  "15080186f94d69",
  "1b783077edf3dd",
  "011e51b3094011",
  "08792fa968e034",
  "0794409a5bf08f",
  "076838aab49ee2",
  "095acd500819fe",
  "14bfc01579105a",
  "08bb5d43ae0e85",
  "1464e26717c9a9",
  "0485dfc2638fe8",
  "0baacc943c741d",
  "0dedf0dca7d1b1",
  "030bf523e41f7e",
  "047b7e583e2a64",
  "1cfa306f42a8fa",
  "1211ca61df6514",
  "108630947ea2d7",
  "1e9d85a7212dcd",
  "1c9221b371902e",
  "0b8d8a944307a3",
  "080dcefaef9f3e",
  "1ce3df6e5df730",
  "1e9b6b803db092",
  "1de40c7cd0f251",
  "0b19b15fe5d5d3",
  "19540ab001f87b",
  "1adc2ce4d2348d",
  "14f7d9659b242f",
  "1827d43b88a60a",
  "0bf1fb686aec21",
  "1107d176849133",
  "053aaf83d6b300",
  "190330058d7ba5",
  "1544173da3e296",
  "1be7acadd19768",
  "00a4d8c3b1bdce",
  "1977fb300e0dc0",
  "0a7af441b8db5a",
  "14df89d06e95b9",
  "199de3e5b932ed",
  "0d4f752a8d45a4",
  "031f823942bc1f",
  "0b9cb4a4a75cc1",
  "1ef9b75ca5a2c9",
  "1afbe0fdc7cf53",
  "049ff15def1103",
  "1e31f063b1054c",
  "055e67731f5519",
  "10ceff56fb0fdd",
  "193c16c25882ef",
  "0d42c5a3b0eca3",
  "0964915e1ff529",
  "025aee297b017b",
  "1e78cd9a01caa7",
  "0429d91dd59744",
  "03a536f23d7eeb",
  "1a562504ad0736",
  "0093bacd02f35e",
  "016022e5034a82",
  "091c91bfbcd518",
  "00daf45042c19f",
  "1dae33230dc0f8",
  "02d442ad07611e",
  "00a6752b1b420b",
  "00b38b8b039d93",
  "0629aee8caa4e5",
  "13934a65b44c2f",
  "08c6b927c334c0",
  "1613e19a072be1",
  "13da89cb2c78bf",
  "105892fd44709a",
  "0820e56379e8b2",
  "05eee36e83df8e",
  "09cb20d1661a89",
  "01a87123c548ca",
  "0e93c0c5d42bdd",
  "133e1cc124e154",
  "02eaa4a6ad3711",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "118a7021804c77",
  "0765cb8e3f4c74",
  "01cebc4e2e9a3d",
  "14dcc72460a72c",
  "10bd71a4309c97",
  "16000ba9380777",
  "04c46bb9b39b8a",
  "0b77a1306fdc77",
  "05ccf8b8a00261",
  "08aac36bbf3eb8",
  "0bbe177c3404a5",
  "1536cf04776a15",
  "1d479349199d30",
  "17a43fe93ed2af",
  "1690a4935864ea",
  "18bed7e63e4ed8",
  "09f3a3659c40b1",
  "1885f55f576aa8",
  "1a77102ac6481c",
  "09eda676026686",
  "170314cc05dfad",
  "0f713c3619bdfe",
  "0f99cf546822e8",
  "0a6ef76ba3a597",
  "04d85de4abcf0a",
  "057bb64b49e2b4",
  "1c49ba7618e145",
  "0594c71b952f15",
  "0bbf88ee9e2a99",
  "06460f12cbadd9",
  "1188ee9602b819",
  "19b28b1b6599d9",
  "1a698348c868c1",
  "1b0f98809467c9",
  "09c8a833726ce0",
  "16a10f9c6af025",
  "1c514adcb3ed10",
  "08c84411260f6d",
  "156c729f8c6779",
  "14d385f143cbf9",
  "0402d8af1aa7d1",
  "1046db0cb8aae6",
  "0d093f015618a1",
  "098884412d3d55",
  "0396a85e6cbe8f",
  "09d930e0948f45",
  "1c70bd601e59b3",
  "08806ad6a83c42",
  "0ce98a8035d19f",
  "141fa5de018010",
  "17528508b4dcc3",
  "0be94310a4465a",
  "1f142ef63faf1b",
  "114860b7513a52",
  "09002c89f3ab03",
  "10e0863cd98831",
  "01f5ebeb1839f3",
  "071cf5d4e17d2c",
  "11a52db24009ba",
  "00a62a06aef1f6",
  "1d4847ff59c3bf",
  "0f8d0024d8600f",
  "0fc1680eb61d6a",
  "0999a1b4b431d0",
  "1145252afcb968",
  "08d15fb32cd7a2",
  "1172cc61b2319f",
  "0ec5cda298012a",
  "0842575f633007",
  "0441fa8558b8bc",
  "1da8f6199b905b",
  "0971c7ec189049",
  "195ead0ff40899",
  "06995267e30e6e",
  "1a8837911f65f6",
  "0d90443ef617f2",
  "08565a5fa708c0",
  "07f702cffd2b98",
  "04a7a160e2dd1c",
  "06cb75db489af7",
  "12f4b793bdb80c",
  "198fefd4bf8c24",
  "08f192b35bcebf",
  "15d299b2b8c03a",
  "024dd0d46bf2f5",
  "12f8a3ed242197",
  "0f3c3d4217ac6c",
  "0e4acac8772277",
  "00cb5a8069c1b9",
  "09e0fcca0717c1",
  "0cbcff3584adb7",
  "19e5d2e1f4dafb",
  "1971a3a75ffcb0",
  "054edbc1663637",
  "0120303896b787",
  "04ec56d642d34d",
  "143478cbd1997a",
  "042086f70c9181",
  "130a4b12f5a3bb",
  "0d6ded4004249c",
  "19e64aa389910f",
  "18c0be62dc0238",
  "1875d82436235f",
  "192695282f30fe",
  "0783356676d43d",
  "05193e7a145d46",
  "00d5430f6867cd",
  "164273b17c731b",
  "1166b4aa41b737",
  "0a6bd84cfd912f",
  "1f380d90731911",
  "1cc9034b7c6372",
  "197823ba383d32",
  "1eebf4f9a5b350",
  "0f58075adf197d",
  "15943f0681e922",
  "18d8081f59cc18",
  "0f6177877ceb9d",
  "17900e12b1db23",
  "1f25292a955073",
  "02a8c1bb8b2eb7",
  "0606f599472d68",
  "1b783077edf3dd",
  "05e5ce24ea0d25",
  "10e2c396d9cd29",
  "04fd85e72e3efb",
  "1674546ec00626",
  "1f9bcb553616d6",
  "14bfc01579105a",
  "08bb5d43ae0e85",
  "09636f2d1d74ed",
  "1b6ec3afbbce7b",
  "049b6c4e55c1ce",
  "0dedf0dca7d1b1",
  "1672f92a443238",
  "047b7e583e2a64",
  "08a3ad0418dd40",
  "05ef8c3600cb35",
  "108630947ea2d7",
  "1e9d85a7212dcd",
  "1c9221b371902e",
  "04296e0fb0b3ef",
  "080dcefaef9f3e",
  "1ce3df6e5df730",
  "11ea50e16bdaf6",
  "0c137ef170c8fd",
  "0b19b15fe5d5d3",
  "02be0a985bf40d",
  "031cc9b94e557a",
  "175ce410e97628",
  "136dc2f733ac47",
  "0ed25e5b7854d5",
  "1469d1d401cbd7",
  "108b2864b8a5aa",
  "190330058d7ba5",
  "1c5eced1886a2b",
  "0a4b816bc996bc",
  "00a4d8c3b1bdce",
  "1977fb300e0dc0",
  "0a7af441b8db5a",
  "1460a5ce6464e3",
  "10dd581fe57824",
  "0d4f752a8d45a4",
  "079719a16dc619",
  "0b9cb4a4a75cc1",
  "138d0180892670",
  "1afbe0fdc7cf53",
  "072832d3c4b351",
  "1a6339e557388d",
  "14cd09824a5b72",
  "10ceff56fb0fdd",
  "17c19fd223b61e",
  "03ac7195ffc7b6",
  "06d1635bd25ed3",
  "0859a8ec8864da",
  "0314941f7a6bca",
  "0b9a6ca7cbedb1",
  "03a536f23d7eeb",
  "1a562504ad0736",
  "0093bacd02f35e",
  "0f5840272b3397",
  "091c91bfbcd518",
  "00daf45042c19f",
  "0326de96ff03dd",
  "0343032ba34f7c",
  "00a6752b1b420b",
  "10bdb23d93c6ab",
  "0629aee8caa4e5",
  "1a1096176b6a48",
  "08c7978c334c16",
  "0e376d923cb4c5",
  "1d71a5659fe9f5",
  "11789cfecd8eb3",
  "12096a72572e29",
  "05163b048cc27c",
  "09cb20d1661a89",
  "074a21b0501da3",
  "02dc3f15ab9f78",
  "10a69f6bd90eaf",
  "13f6f2083c2dd9",
]
`;
